objects/LMS_CategoryTranslation__c.object
<CustomObject>
    <fields>
        <fullName>Categrory_Id__c</fullName>
        <formula>Item_Category__r.Category_Id__c</formula>
        <label>Categrory Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Category__c</fullName>
        <label>Item Category</label>
        <referenceTo>LMS_ItemCategory__c</referenceTo>
        <relationshipLabel>Category Translations</relationshipLabel>
        <relationshipName>Category_Translations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <referenceTo>LMS_ProductName__c</referenceTo>
        <relationshipLabel>Category Translations</relationshipLabel>
        <relationshipName>Category_Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <formula>Item_Category__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Name</label>
        <type>Text</type>
    </fields>
    <label>Category Translation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item_Category__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Categrory_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IC-PN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>